# cmake-build

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: main.c
